--- a/eurakeclient/pom.xml
+++ b/eurakeclient/pom.xml
@@ -67,11 +67,11 @@
 		</dependency>
 		<!-- 添加redis
 		 http://www.redis.net.cn/order/-->
-		<!--<dependency>-->
-			<!--<groupId>org.springframework.boot</groupId>-->
-			<!--<artifactId>spring-boot-starter-redis</artifactId>-->
-			<!--<version>1.4.5.RELEASE</version>-->
-		<!--</dependency>-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-redis</artifactId>
+			<version>1.4.5.RELEASE</version>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
