--- a/eurakeclient/src/main/resources/application.yml
+++ b/eurakeclient/src/main/resources/application.yml
@@ -7,24 +7,21 @@ server:
 spring:
   devtools:
     application:
-      name: eurakec-lient
+      name: eurake-client
     restart:
       exclude:  static/**,public/**
       enabled:  true
-#    datasource:
-#      name: sv
-#      url: jdbc:mysql://192.168.19.249:3306/mynet?autoReconnect=true
-#      username: root
-#      password: san1546
+    datasource:
+      url: jdbc:mysql://192.168.19.249:3306/mynet?autoReconnect=true
+      username: root
+      password: san1546
 ## 使用druid数据源
 #        type: com.alibaba.druid.pool.DruidDataSource
 #        driver-class-name: com.mysql.jdbc.Driver
 
 mybatis:
-  configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
     mapper-locations: classpath*:mapper/*.xml
-    type-aliases-package: com.example.demo.model
+    type-aliases-package: com.example.eurakeclient.model
 
 #pagehelper分页插件
 pagehelper:
