--- a/eurakeserver/src/main/resources/application.yml
+++ b/eurakeserver/src/main/resources/application.yml
@@ -1,23 +1,7 @@
-server:
-  port: 8888
+#spring:
+#  profiles:
+#    active: peer1
 
-eureka:
-  instance:
-    hostname: localhost
-  server:
-          # 关闭自我保护
-          enable-self-preservation: false
-          # 清理服务器
-          eviction-interval-timer-in-ms: 5000
-  client:
-    register-with-eureka: false
-    fetch-Registry: false
-    serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka
 spring:
-  security:
-    basic:
-      enabled: true
-    user:
-      name: root
-      password: san1546
+  profiles:
+    active: peer2
