--- a/ribbon/src/main/resources/application.yml
+++ b/ribbon/src/main/resources/application.yml
@@ -3,4 +3,7 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8888/eureka
+      defaultZone: http://localhost:1122/eureka/,http://localhost:1133/eureka/
+spring:
+  application:
+    name: service-ribbon
